# trace

./: .gitignore  justfile
converter/: Cargo.toml  out.txt
converter/src/: main.rs
pointplotter/source/: cursor.lua  drawing.lua  main.lua  pdxinfo  target.lua  vectorsprite.lua
pointplotter/source/widgets/: angleDifference.lua
