[package]
name = "converter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eyre = "0.6.11"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.110"
usvg = { version = "0.37.0", features = ["text"] }
